<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidcell_phone_wallpapers6"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/View_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#CDFAFF"
        android:textSize="15sp"
        android:text="@string/mod"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/View_title"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textColor="#CDFAFF"
                android:textSize="40sp"
                android:text="@string/title1"
                />
            <TextView
                android:id="@+id/View_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:maxLines="7"
                android:textColor="#CDFAFF"
                android:textSize="30sp"
                android:text="@string/text1"
                 />
            <TextView
                android:id="@+id/View_remindDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="#CDFAFF"
                android:textSize="25sp"
                android:text="@string/timeSeted"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
