<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textColor="#0CC445"
                android:textSize="25sp"
                android:hint="@string/process_title"
                />
        <TextView
            android:id="@+id/item_kind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:textColor="#96B4CC"
            android:textSize="15sp"
            android:text="@string/menu_mod"
            />

        </LinearLayout>
    <TextView
		android:id="@+id/item_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="#CDFAFF"
        android:textSize="15sp"
        android:text="@string/process_time"
        />

</LinearLayout>
