<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

     <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/androidcell_phone_wallpapers6">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/ct_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#CDFAFF"
                android:textSize="35sp"
                android:hint="@string/note_Title"

                />
            <EditText
                android:id="@+id/ct_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="text"
                android:hint="@string/note_content"
                android:textColorHint="#ffaaaaaa"
                android:maxLines="7"
                android:textColor="#CDFAFF"
                android:textSize="20sp"

                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#ff999999"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#CDFAFF"
                android:textSize="20sp"
                android:text="@string/time_title"
                />

                    <RadioGroup
                        android:id="@+id/select_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        android:
                            <RadioButton
                                android:id="@+id/choosed_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#CDFAFF"
                                android:textSize="20sp"
                                android:text="@string/reciprocal"
                                />
                            <RadioButton
                                android:id="@+id/choosed_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#CDFAFF"
                                android:textSize="20sp"
                                android:text="@string/date"
                                />
                    </RadioGroup>
                    
                    <TextView 
                        android:id="@+id/reciprocal_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textColor="#CDFAFF"
                         android:textSize="15dp"
                         android:text="@string/timeRange"
                        />
                    <LinearLayout 
                        android:id="@+id/ln"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <EditText 
	                        android:id="@+id/reciprocal"
	                        android:layout_width="70dp"
	                        android:layout_height="wrap_content"
	                        android:gravity="center_horizontal"
	                        android:layout_marginTop="10dp"
	                        android:textColor="#CDFAFF"
	                        android:textSize="20dp"
	                        android:hint="1"
	                        android:inputType="number"
	                        android:maxEms="2"
                        />
                        <TextView 
                            
                            android:layout_width="wrap_content"
                        	android:layout_height="wrap_content"
                        	android:layout_marginTop="10dp"
                        	android:textColor="#CDFAFF"
                        	android:textSize="20dp"
                        	android:text="分鐘後"
                            />
                    </LinearLayout>
                    
                    
                    <Button
                        android:id="@+id/select_butoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="#9FFFC7"
                        android:textSize="25sp"
                        android:text="@string/choose_date"
                        android:visibility="gone"
                        />
                    <TextView
                        android:id="@+id/timeShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="#CDFAFF"
                        android:textSize="20sp"
                        android:textColorHint="#ffaa0000"
                        android:hint="@string/show_date"
                        android:visibility="gone"
                        />
                    <LinearLayout 
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        
                        >
                        
                        <Button 
                            android:id="@+id/cancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#939EE5"
                            android:textSize="20dp"
                            android:text="@string/cancel_button"
                            />
                        <Button 
                            android:id="@+id/checked"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#939EE5"
                            android:textSize="20dp"
                            android:text="@string/new_button"
                            />
                        
                    </LinearLayout>

            </LinearLayout>

        </ScrollView>
    
</LinearLayout>
